--- a/week_7_IVP_ODE.ipynb
+++ b/week_7_IVP_ODE.ipynb
@@ -888,7 +888,7 @@
    "source": [
     "### Тест I.2\n",
     "\n",
-    "Решите то же самое уравнение $du/dt = \\lambda u$, используя невную схему Эйлера. Сравните поведение неянвой и явной схем Эйлера. Обсудите.\n",
+    "Решите то же самое уравнение $du/dt = \\lambda u$, используя невную схему Эйлера. Сравните поведение неявной и явной схем Эйлера. Обсудите.\n",
     "\n",
     "(10% итогвой оценки)"
    ]
@@ -1018,7 +1018,7 @@
     "E = \\frac{u'^2}{2} + \\frac{\\omega^2 u^2}{2}\n",
     "$$\n",
     "\n",
-    "Постройте зависимость $E$ от времени для вашего численного решения. Используйте несколько значений шага. Выполняетс ли закон сохранения энергии?\n",
+    "Постройте зависимость $E$ от времени для вашего численного решения. Используйте несколько значений шага. Выполняется ли закон сохранения энергии?\n",
     "\n",
     "(20% итоговой оценки)"
    ]
