WIP: KdV problem

--- a/make_your_choice.tex
+++ b/make_your_choice.tex
@@ -37,7 +37,7 @@
 \item Для $d=1$
 \end{enumerate}
 
-
+\item Построить солитонное решение стационарного уравнения Кортевега-де-Вриза. Написать программу, моделирующую динамику начально-граничной задачи с несколькими солитонами при $t=0$.
 
 \setcounter{eee}{\value{enumi}}
 \end{enumerate}
