Some functions are upgrated, add few methods

--- a/Dual numbers.ipynb
+++ b/Dual numbers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,70 +16,102 @@
     "    \n",
     "    def __str__(self):\n",
     "        return str(self.r)+\"+g(\"+str(self.g)+\")\"\n",
-    "    \n",
-    "    def __add__(self,other):\n",
-    "        if type(other) != Dual:\n",
-    "            other = Dual(other,0)\n",
-    "        newr = self.r + other.r\n",
-    "        newg = self.g + other.g\n",
     "\n",
-    "        return Dual(newr, newg)\n",
-    "    \n",
-    "    def __radd__(self, other):\n",
-    "        if type(other) != Dual:\n",
-    "            other = Dual(other,0)\n",
-    "        newr = self.r + other.r\n",
-    "        newg = self.g + other.g\n",
-    "\n",
-    "        return Dual(newr, newg)\n",
-    "    \n",
     "    def __eq__(self, other):\n",
-    "        if type(other) != Dual:\n",
+    "        if not isinstance(other, Dual):\n",
     "            other = Dual(other,0)\n",
     "        er = (self.r == other.r)\n",
     "        eg = (self.g == other.g)\n",
-    "        return er and eg\n",
+    "        return er and eg    \n",
+    "\n",
+    "    def __add__(self,other):\n",
+    "        if not isinstance(other, Dual):\n",
+    "            other = Dual(other,0)\n",
+    "        newr = self.r + other.r\n",
+    "        newg = self.g + other.g\n",
+    "        return Dual(newr, newg)\n",
     "    \n",
+    "    def __radd__(self, other):\n",
+    "        if not isinstance(other, Dual):\n",
+    "            other = Dual(other,0)\n",
+    "        return self+other\n",
+    "    \n",
+    "    def _iadd__(self, other):\n",
+    "        return self+other\n",
+    "    \n",
+    "    def __sub__(self, other):\n",
+    "        if not isinstance(other, Dual):\n",
+    "            other = Dual(other,0)\n",
+    "        return Dual(self.r-other.r, self.g - other.g)\n",
+    "\n",
+    "    def __rsub__(self, other):\n",
+    "        if not isinstance(other, Dual):\n",
+    "            other = Dual(other,0)\n",
+    "        return other-self        \n",
+    "\n",
+    "    def _isub__(self, other):\n",
+    "        return self-other\n",
+    "\n",
     "    def __mul__(self, other):\n",
-    "        if type(other) != Dual:\n",
+    "        if not isinstance(other, Dual):\n",
     "            other = Dual(other,0)\n",
     "        newr = self.r * other.r\n",
     "        newg = self.r * other.g + self.g * other.r\n",
     "        return Dual(newr, newg)\n",
     "    def __rmul__(self, other):\n",
-    "        if type(other) != Dual:\n",
+    "        if not isinstance(other, Dual):\n",
     "            other = Dual(other,0)\n",
-    "        newr = self.r * other.r\n",
-    "        newg = self.r * other.g + self.g * other.r\n",
-    "        return Dual(newr, newg)\n",
+    "        return other*self\n",
+    "\n",
+    "    def _imul__(self, other):\n",
+    "        return self*other\n",
+    "\n",
     "    def __neg__(self):\n",
     "        return Dual(-self.r, -self.g)\n",
-    "    def __sub__(self, other):\n",
-    "        if type(other) != Dual:\n",
-    "            other = Dual(other,0)\n",
-    "        return Dual(self.r-other.r, self.g - other.g)\n",
-    "    def __rsub__(self, other):\n",
-    "        if type(other) != Dual:\n",
-    "            other = Dual(other,0)\n",
-    "        return Dual(-self.r+other.r, -self.g + other.g)        \n",
+    "\n",
     "    \n",
     "    def __truediv__(self, other):\n",
-    "        if type(other) != Dual:\n",
+    "        if not isinstance(other, Dual):\n",
     "            other = Dual(other,0)\n",
     "        return Dual(self.r/other.r , self.g/other.r - self.r*other.g/other.r/other.r)\n",
+    "\n",
     "    def __rtruediv__(self, other):\n",
-    "        if type(other) != Dual:\n",
+    "        if not isinstance(other, Dual):\n",
     "            other = Dual(other,0)\n",
     "        return other/self\n",
+    "    \n",
+    "    def __itruediv__(self, other):\n",
+    "        return self/other\n",
+    "    \n",
     "    def __pow__(self, other):\n",
-    "        now = 1\n",
-    "        for _ in range(other):\n",
-    "            now = now * self\n",
-    "        return now\n",
-    "def dexp(s):\n",
+    "        return Dual(self.r**other, self.g*other*self.r**(other-1)) #only for `usual` other, else look power\n",
+    "\n",
+    "    def __abs__(self):\n",
+    "        return abs(self.r)\n",
+    "def exp(s):\n",
+    "    if not isinstance(s, Dual):\n",
+    "        s = Dual(s, 0)\n",
     "    return Dual(np.exp(s.r), np.exp(s.r)*s.g)\n",
-    "def dln(s):\n",
+    "\n",
+    "def ln(s):\n",
+    "    if not isinstance(s, Dual):\n",
+    "        s = Dual(s, 0)\n",
     "    return Dual(np.log(s.r), s.g / s.r)\n",
+    "\n",
+    "def power(a, s):# a^x\n",
+    "    return exp(ln(a)*s)\n",
+    "\n",
+    "def sin(s):\n",
+    "    if not isinstance(s, Dual):\n",
+    "        s = Dual(s, 0)\n",
+    "    return Dual(np.sin(s.r), s.g * np.cos(s.r))\n",
+    "\n",
+    "def cos(s):\n",
+    "    if not isinstance(s, Dual):\n",
+    "        s = Dual(s, 0)\n",
+    "    return Dual(np.cos(s.r), -s.g*np.sin(s.r))\n",
+    "\n",
+    "\n",
     "def dsin(x):\n",
     "    i, lasts, s, fact, num, sign = 1, Dual(0,0), x, 1, x, 1\n",
     "    while abs(s.r - lasts.r) > 1e-20:\n",
@@ -101,10 +133,10 @@
     "        sign *= -1\n",
     "        s = s + num / fact * sign\n",
     "    return s\n",
-    "def dch(x):\n",
-    "    return (dexp(x) + dexp(-x))/2\n",
-    "def dsh(x):\n",
-    "    return (dexp(x) - dexp(-x))/2"
+    "def ch(x):\n",
+    "    return (exp(x) + exp(-x))/2\n",
+    "def sh(x):\n",
+    "    return (exp(x) - exp(-x))/2"
    ]
   },
   {
@@ -124,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -137,12 +169,12 @@
    ],
    "source": [
     "x = Dual(2.5, 1)\n",
-    "print((np.log(3)*dsin(x)+dcos(x))/ dexp(np.log(3)*x))"
+    "print((np.log(3)*dsin(x)+dcos(x))/ exp(np.log(3)*x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -179,12 +211,12 @@
    ],
    "source": [
     "x = Dual(1, 1)\n",
-    "print(dch(x)/dsh(x)/dsh(x) - dln(dch(x/2)/dsh(x/2)))"
+    "print(ch(x)/sh(x)/sh(x) - ln(ch(x/2)/sh(x/2)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -197,6 +229,48 @@
    ],
    "source": [
     "print(-2 / np.sinh(1)**3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**904.**  $\\displaystyle \\ln \\sqrt{\\frac{1-\\sin x}{1+\\sin x}} \\implies \\text{An:}- \\frac{1}{\\cos x}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-0.6765532587260854+1.2304675059389543j)+g((0.41314934426694006-0.687527438655479j))\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = Dual(2+1j, 1)\n",
+    "print(ln(((1-sin(x))/(1+sin(x)))**0.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.41314934426694-0.6875274386554789j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(-1/np.cos(2+1j))"
    ]
   }
  ],
