--- a/dual numbers.ipynb
+++ b/dual numbers.ipynb
@@ -1330,7 +1330,7 @@
     "\n",
     "Сначала рассмотрим случай, когда дуальное число возводится в вещественную степень:\n",
     "$$\n",
-    "z^{x} = \\big(a \\cdot \\mathrm{exp}(\\frac{b}{a}\\varepsilon)\\big)^{x} = a^{x} \\cdot \\mathrm{exp}(\\frac{bx}{a}\\varepsilon) = a^{x} \\cdot (1 + \\frac{bx}{a}\\varepsilon) = a^{x} + ba^{x-1}\\varepsilon\n",
+    "z^{x} = \\big(a \\cdot \\mathrm{exp}(\\frac{b}{a}\\varepsilon)\\big)^{x} = a^{x} \\cdot \\mathrm{exp}(\\frac{bx}{a}\\varepsilon) = a^{x} \\cdot (1 + \\frac{bx}{a}\\varepsilon) = a^{x} + bxa^{x-1}\\varepsilon\n",
     "$$\n",
     "\n",
     "Теперь возведение вещественного числа в дуальную степень:\n",
