RU: fix typos in weeks 0-7, add translation to week_8 (#17)

--- a/week_2_Householder_QR.ipynb
+++ b/week_2_Householder_QR.ipynb
@@ -65,7 +65,7 @@
     "    outvec : array of floats, shape (n,)\n",
     "        Преобразованный вектор, причем ``outvec[1:]==0`` и ``|outvec| == |vec|``\n",
     "    H : array of floats, shape (n, n)\n",
-    "        Ортогональная матрица отображений Хаусхолдера\n",
+    "        Ортогональная матрица отражений Хаусхолдера\n",
     "    \"\"\"\n",
     "    vec = np.asarray(vec, dtype=float)\n",
     "    if vec.ndim != 1:\n",
@@ -91,8 +91,7 @@
     {
      "ename": "NameError",
      "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": []
+     "output_type": "error"
     }
    ],
    "source": [
@@ -127,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part II. Вычисление $\\mathrm{QR}$ разложения матрицы.\n",
+    "# Part II. Вычисление $\\mathrm{QR}$ - разложения матрицы.\n",
     "\n",
     "Дана прямоугольная $m\\times n$ матрица $\\mathbf{A}$. Выполните отражение Хаусхолдера матрицы $\\mathbf{H}_1$, преобразующее первый столбец матрицы $\\mathbf{A}$ (назовем результат $\\mathbf{A}^{(1)}$)\n",
     "\n",
@@ -163,14 +162,14 @@
     "\\mathbf{H}_{n-1} \\cdots \\mathbf{H}_2 \\mathbf{H}_1 \\mathbf{A} = \\mathbf{R} \\;,\n",
     "$$\n",
     "\n",
-    "где $\\mathbf{R}$ верхнетреугольная матрица. Так как каждая $\\mathbf{H}_k$ ортогональна, таковым будет и их произведение. Обратная от ортогональной также есть матрица ортогональная. Таким образом, алгоритм создает $\\mathrm{QR}$ разложение матрицы $\\mathbf{A}$."
+    "где $\\mathbf{R}$ верхнетреугольная матрица. Так как каждая $\\mathbf{H}_k$ ортогональна, таковым будет и их произведение. Обратная от ортогональной также есть матрица ортогональная. Таким образом, алгоритм создает $\\mathrm{QR}$ - разложение матрицы $\\mathbf{A}$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Напишите функцию, получающую прямоугольную матрицу $A$ и возвращающую Q и R - компоненты $QR$ разложения $A$."
+    "Напишите функцию, получающую прямоугольную матрицу $A$ и возвращающую Q и R - компоненты $QR$ - разложения $A$."
    ]
   },
   {
@@ -180,7 +179,7 @@
    "outputs": [],
    "source": [
     "def qr_decomp(a):\n",
-    "    \"\"\"Вычисляет QR разложение матрицы.\n",
+    "    \"\"\"Вычисляет QR - разложение матрицы.\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
@@ -217,12 +216,11 @@
     {
      "ename": "NameError",
      "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": []
+     "output_type": "error"
     }
    ],
    "source": [
-    "# можете запустить данную операцию для более краисвого вывода: нули вместо `1e-16` и т.д.\n",
+    "# можете запустить данную операцию для более красивого вывода: нули вместо `1e-16` и т.д.\n",
     "\n",
     "np.set_printoptions(suppress=True)"
    ]
@@ -287,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Часть III. Безматричный алгоритм."
+    "# Часть III. Безматричная реализация."
    ]
   },
   {
@@ -304,14 +302,14 @@
     "\\mathbf{u} \\left( \\mathbf{u}^T \\mathbf{A} \\right) \\qquad \\textrm{is } O(mn)\n",
     "$$\n",
     "\n",
-    "Так, кажется, что имеет смысл *избегать* формирований матриц $\\mathbf{H}$. Вместо этого можно сохранять сами векторы отражения $\\mathbf{u}$ и производить умножение произвольной матрицы на $\\mathbf{Q}^T$, например, как отдельную функцию (класс)."
+    "Таким образом, следует *избегать* формирований матриц $\\mathbf{H}$. Вместо этого можно сохранять сами векторы отражения $\\mathbf{u}$ и производить умножение произвольной матрицы на $\\mathbf{Q}^T$, например, как отдельную функцию (класс)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Напишите функцию, выполняющую `QR` разложение матрицы *без формирования* матриц $\\mathbf{H}$ и возвращающую матрицу $\\mathbf{R}$, а также вектор отражения. \n",
+    "Напишите функцию, выполняющую `QR` - разложение матрицы *без формирования* матриц $\\mathbf{H}$ и возвращающую матрицу $\\mathbf{R}$, а также вектор отражения. \n",
     "\n",
     "Напишите вторую функцию, которая использует вектор отражения чтобы перемножить матрицу с $\\mathbf{Q}^T$. Убедитесь, что вы добавили достаточно комментариев, следующих вашим выкладкам. Напишите тесты.\n",
     "\n",
