--- a/week_3_newton_fixed_pt.ipynb
+++ b/week_3_newton_fixed_pt.ipynb
@@ -38,7 +38,7 @@
     "        Алгоритм прекращает работу когда расстояние между последовательными приближениями меньше `eps`.\n",
     "        По умолчанию 1e-5.\n",
     "    maxiter : int\n",
-    "        Максимальное число итераций (по умолчанию 1000.)\n",
+    "        Максимальное число итераций (по умолчанию 1000).\n",
     "        Алгоритм прекращается, когда число итераций достигает `maxiter`.\n",
     "        Этот параметр нужен лишь для предотвращения бесконечного зацикливания.\n",
     "    \n",
@@ -47,7 +47,7 @@
     "    x : float\n",
     "        Найденное приближение к корню.\n",
     "    niter : int\n",
-    "        Количество итерацй.\n",
+    "        Количество итераций.\n",
     "    \"\"\"\n",
     "    # ... ENTER YOUR CODE HERE ..."
    ]
@@ -84,7 +84,7 @@
     "x_{n+1} = x_{n} - m \\frac{f(x_n)}{f'(x_n)}\n",
     "$$\n",
     "\n",
-    "и проварьируем $m= 1, 2, 3, 4, 5$. Проверьте количество итераций необходимых для сходимости в пределах фиксированного $\\epsilon$. Cогласуются ли ваши наблюдения с ожиданием того, что сходимость будет квадратичной, если $m$ совпадает с количеством корней и линейной в других случаях. (40% итоговой оценки)."
+    "и проварьируем $m= 1, 2, 3, 4, 5$. Проверьте количество итераций, необходимых для сходимости в пределах фиксированного $\\epsilon$. Cогласуются ли ваши наблюдения с ожиданием того, что сходимость будет квадратичной, если $m$ совпадает с количеством корней и линейной в других случаях. \n (40% итоговой оценки)."
    ]
   },
   {
@@ -119,7 +119,7 @@
     "\n",
     "Напишите функцию, находящую решение, используя метод простой итерации в пределах погрешности $\\epsilon$. Сравните результат с визуальной оценкой.\n",
     "\n",
-    "Далее перепишите задачу простой итерации в форме\n",
+    "Далее, перепишите задачу простой итерации в форме\n",
     "\n",
     "$$\n",
     "x = x - \\alpha f(x)\n",
@@ -131,7 +131,7 @@
     "\\alpha = \\frac{2}{m + M}\n",
     "$$\n",
     "\n",
-    "где $0 < m < |f'(x)| < M$ вне интервала локлизации. (40% итоговой оценки)"
+    "где $0 < m < |f'(x)| < M$ вне интервала локализации. (40% итоговой оценки)"
    ]
   },
   {
@@ -161,7 +161,7 @@
     "\n",
     "Оно имеет три решения на комплексной плоскости, $x_k = \\exp(\\frac{2\\pi i\\,k}{3})$, $k = 0, 1, 2$.\n",
     "\n",
-    "Итерации Ньютона сходятся к одному из них в зависимости от начального приближения на комплексной плоскости (для сходимости, естественно, начальное приближение должно иметь ненулевую мнимую часть. начальную точку.\n",
+    "Итерации Ньютона сходятся к одному из них в зависимости от начального приближения на комплексной плоскости (для сходимости, естественно, начальное приближение должно иметь ненулевую мнимую часть. \n",
     "\n",
     "Постройте области сходимости к различным корням на комплексной плоскости $x$ (В сущности на плоскости $\\mathrm{Re}x$ -- $\\mathrm{Im}x$). Выполните ряд вычислений, варьируя начальные приближения на сетке значений. Раскрасьте плоскость в три цвета в соответствии с корнем, к которому сходится решение."
    ]
