--- a/week_5_intep_approx.ipynb
+++ b/week_5_intep_approx.ipynb
@@ -64,7 +64,7 @@
    "source": [
     "### I.II \n",
     "\n",
-    "Чтобы найти оптимальное значение $m$, используйти следующий критерий: возьмем $m=0, 1, 2, \\dots$, для каждого значения $m$ вычис\n",
+    "Чтобы найти оптимальное значение $m$, используйти следующий критерий: возьмем $m=0, 1, 2, \\dots$, для каждого значения $m$ вычислим\n",
     "\n",
     "$$\n",
     "\\sigma_m^2 = \\frac{1}{n - m} \\sum_{k=0}^n \\left( P_m(x_k) - y_k \\right)^2\n",
@@ -108,9 +108,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### I.III. МНК с использовнием QR - разложение.\n",
+    "### I.III. МНК с использовнием QR - разложениея.\n",
     "\n",
-    "Для оптимального значения $m$ из предыдущей части решите задачу МНК, используя безматричную реализацию QR - разложения. Для решения задач линейной алгебры можете использовать библиотечные функции (обратите внимание на `numpy.linalg.solve`, `numpy.linalg.qr` и т.д.) или используйте код предыдущих недель.\n",
+    "Для оптимального значения $m$ из предыдущей части решите задачу МНК, используя безматричную реализацию QR - разложения. Для решения задач линейной алгебры можете использовать библиотечные функции (обратите внимание на `numpy.linalg.solve`, `numpy.linalg.qr` и т.д.) или код предыдущих недель.\n",
     "Сравните результат с ответом, полученным при решении системы уравнений.\n",
     "\n",
     "(20% итоговой оценки)"
