--- a/week_6_calculus.ipynb
+++ b/week_6_calculus.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Напишите функцию `deriv`, которая вычисляет производную аргумента в заданной точке $x$, используя односторонню разностную схему с заданным шагом $h$ и степенью аппроксимации $O(h^2)$."
+    "Напишите функцию `deriv`, которая вычисляет производную аргумента в заданной точке $x$, используя одностороннюю разностную схему с заданным шагом $h$ и степенью аппроксимации $O(h^2)$."
    ]
   },
   {
@@ -115,7 +115,7 @@
    "source": [
     "### Тест I.3 \n",
     "\n",
-    "Теперь продифференцируйте $x^2 \\log(x)$ в $x=0$. Используйте трехточечную схему. Заметьте, что В нуле функцию нужно доопределить явным образом. Проверьте шкалированные ошибки. Объясните полученные результаты.\n",
+    "Теперь продифференцируйте $x^2 \\log(x)$ в $x=0$. Используйте трехточечную схему. Заметьте, что в нуле функцию нужно доопределить явным образом. Проверьте шкалированные ошибки. Объясните полученные результаты.\n",
     "\n",
     "(25% итоговой оценки)"
    ]
@@ -156,14 +156,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part II. Midpoint rule "
+    "# Часть II. Правило центральной точки "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Напишите функцию, вычисляющую определенный интеграл, используя \"midpoint rule\", с точностью до заданной погрешности $\\epsilon$. Оцените ошибку, сравнивая значения интеграла для $N$ и $2N$ элементарных интервалов."
+    "Напишите функцию, вычисляющую определенный интеграл, используя правило центральной точки, с точностью до заданной погрешности $\\epsilon$. Оцените ошибку, сравнивая значения интеграла для $N$ и $2N$ элементарных интервалов."
    ]
   },
   {
@@ -175,9 +175,9 @@
    "outputs": [],
    "source": [
     "def midpoint_rule(func, a, b, eps):\n",
-    "    \"\"\" Вычисляет интеграл f от a до b используя \"midpoint rule\".\n",
+    "    \"\"\" Вычисляет интеграл f от a до b используя правило центральной точки.\n",
     "    \n",
-    "    Параметры\n",
+    "    Parameters\n",
     "    ----------\n",
     "    func : callable\n",
     "        Функция, которую нужно проинтегрировать\n",
@@ -188,7 +188,7 @@
     "    eps : float\n",
     "        Ожидаемая ошибка оценки\n",
     "        \n",
-    "    Возвращает\n",
+    "    Returns\n",
     "    -------\n",
     "    integral : float\n",
     "        Оценка интеграла $\\int_a^b f(x) dx$.\n",
@@ -206,7 +206,7 @@
     "\n",
     "Сравните скорость сходимости с ожидаемой $O(N^{-2})$ в зависимости от количества интервалов, необходимых для заданной точности $\\epsilon$.\n",
     "\n",
-    "Сравните полученный результат с ответом, вычисленным руками. Попадает ли результат в интервал заданной ошибки?\n",
+    "Сравните полученный результат с ответом, вычисленным \"руками\". Попадает ли результат в интервал заданной ошибки?\n",
     "\n",
     "(20% итоговой оценки)\n"
    ]
