--- a/week_8_Advanced_Integrals.ipynb
+++ b/week_8_Advanced_Integrals.ipynb
@@ -4,44 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 1. Gaussian quadrature\n",
+    "## Часть 1. Гауссовы квадратуры\n",
     "\n",
-    "The Gaussian quadrature method is one of the methods of numerical integration that allows you to increase the accuracy of integration, by using orthogonal polynomials and their roots as nodes.\n",
+    "Метод Гауссовых квадратур является одним из методов численного интегрирования, который позволяет увеличить точность интегрирования, используя ортогональные полиномы и их корни в качестве узлов.\n",
     "\n",
     "$$\n",
     "\\int_a^b \\!  w(x)\\, f(x)\\, dx \\approx \\sum_{k=1}^n w_k \\, f(x_k) \\;,\n",
     "$$\n",
     "\n",
-    "here $\\omega$ is the weight function, this weight function determines the basis of orthogonal polynomials whose roots are used as integration nodes. If the function $f(x)$ is a polynomial, then such an integration method gives *exact* value for the integral."
+    "здесь $\\omega$ - функция весов, которая определят базис ортогональных полиномов, чьи корни используются в качестве узлов интегрирования. Если функция $f(x)$ является полиномом, тогда такой метод интегрирования даст *точное* решение интеграла."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For example, let's calculate the following integral:\n",
+    "Например, давайте посчитаем следующий интеграл:\n",
+    "\n",
     "$$\n",
     "\\int_{-1}^1 (7x^3 - 8 x^2 - 3 x + 3) dx  \\label{eq1}\\tag{1}\n",
     "$$\n",
     "\n",
-    "Here function is already polynomial, so we put the weight function $\\omega(x) = 1$. Then the calculation of the integral reduces to the sum in the polynomials roots witch corresponding to the weight function $\\omega(x) = 1$. For example, here https://dlmf.nist.gov/18.3 you may see which basis of polynomials corresponds to your weight function.\n",
+    "Здесь функция уже полиномиальна, поэтому возьмем весовую функцию $\\omega(x) = 1$. Тогда вычисление интеграла сводится к сумме корней полинома, соответствующих весовой функции $\\omega(x) = 1$. Например, здесь https://dlmf.nist.gov/18.3 вы можете увидеть, какой базис полиномов соответствует вашей весовой функции.\n",
     "\n",
-    "You may see, that Legendre polynomials correspond to our weight function. Now go to the documentation https://docs.scipy.org/doc/scipy/reference/special.html#orthogonal-polynomials. Here, the function *roots_legendre* immediately gives you the roots of the Legendre polynomial and weight at this roots (for Legendre polynomials all these weight are ones).\n"
+    "Заметим, что нашей соответствуют полиномы Лежандра. Теперь, зайдем в документацию https://docs.scipy.org/doc/scipy/reference/special.html#orthogonal-polynomials. Функция *roots_legendre* сразу же выдаст корни полиномов Лежандра, а также веса к их корням (для полиномов Лежандра все эти веса равны единице)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task 1.1\n",
-    "(20% of the grade)"
+    "###  Задание 1.1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Calculate the exact value of the integral ([1](#mjx-eqn-eq1)) using a pen and paper (or in your mind). Remember it, then you will compare numerical results with it."
+    "1. Посчитайте точное значение интеграла ([1](#mjx-eqn-eq1)) \"руками\". Сравните его с полученным численным значением."
    ]
   },
   {
@@ -50,14 +50,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Enter your answer here."
+    "### Напишите код здесь"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Calculate the value of the integral ([1](#mjx-eqn-eq1)) using the usual method of numerical integration on a uniform grid (for example, implemented by you in week_6_calculus homework). Estimate the number of nodes needed to achieve relative accuracy $10^{-10}$."
+    "2. Посчитайте значение интеграла ([1](#mjx-eqn-eq1)), используя обычный метод интегрирования на равномерной сетке (например, написанный вами в week_6_calculus). Оцените количество узлов, необходимых для достижения относительной точности $10^{-10}$."
    ]
   },
   {
@@ -66,14 +66,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Enter your code and answer here"
+    "### Напишите код здесь"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Calculate the integral ([1](#mjx-eqn-eq1)) using the roots of the Legendre polynomial from 1 to 6 degrees as nodes (to get roots and weigths use scipy.special.roots_legendre)"
+    "3. Посчитайте значение интеграла ([1](#mjx-eqn-eq1)), используя корни полинома Лежандра степени от 1 до 6 в качестве узлов (чтобы получить корни и веса используйте scipy.special.roots_legendre)"
    ]
   },
   {
@@ -82,38 +82,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Enter your code here"
+    "### Напишите код здесь"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compare the number of nodes needed to obtain the same accuracy in both numerical methods."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Enter your conclusion here."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Task 1.2\n",
-    "(20% of the grade)\n",
+    "Сравните количество узлов, необходимых для достижения одинаковой точности в обоих чисенных методах.\n",
     "\n",
-    "Calculate the value of the same integral, but on the interval from 0 to 10.\n",
+    "(20% итоговой оценки)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Напишите вывод"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Задание 1.2\n",
+    "\n",
+    "Вычислите значение того же интеграла, но на интервале от 0 до 10.\n",
+    "\n",
     "$$\n",
     "\\int_{0}^{10} (7x^3 - 8 x^2 - 3 x + 3) dx \n",
     "$$\n",
     "\n",
-    "Please note that you can no longer directly use Legendre polynomials, because they are defined for the interval (-1,1). But you can always make an *affine transformation* (a transformation that does not change the area) in order to go to the desired coordinate system."
+    "Заметим, что больше нельзя использовать полиномы Лежанда, потому что они определены на интервале (-1, 1). Однако всегда можно произвести *аффинное преобразование* (преобразование не меняет область интегрирования) для того, чтобы перейти к желаемой системе координат.\n",
+    "\n",
+    "(20% итоговой оценки)"
    ]
   },
   {
@@ -122,29 +126,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Enter your code here"
+    "### Напишите код здесь"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compare the result with the exact value of the integral."
+    "Сравните результат с точным значением интеграла."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task 1.3\n",
-    "(20% of the grade)\n",
+    "### Задание 1.3\n",
     "\n",
-    "Calculate the value of the following integral:\n",
+    "Вычислите значение следующиего интеграла:\n",
     "$$\n",
     "\\int_{0}^{2\\pi} \\frac{cos(x) dx }{\\sqrt{4\\pi^2 - x^2}}\n",
     "$$\n",
-    "by using the corresponding basis of orthogonal polynomials. \n",
-    "Find the degree of the polynomial (number of nodes) at which the accuracy of the integral starts to exceed the double floating point accuracy."
+    "используя соответствующий базис ортогональных полиномов.\n",
+    "Найдите степень полинома (количество узлов), при которой точность превысит ошибку плавающей точки.\n",
+    "\n",
+    "(20% итоговой оценки)"
    ]
   },
   {
@@ -153,87 +158,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Enter your code here"
+    "### Напишите код здесь"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2. Fredholm equation\n",
+    "## Часть 2. Уравение Фредгольма\n",
     "\n",
-    "There are two types of Fredholm equations. \n",
+    "Существует два типа уравнений Фредгольма: \n",
     "\n",
-    "1. Fredholm equation of the first kind:\n",
+    "1. Уравение Фредгольма первого рода:\n",
     "$$\n",
     "\\int_a^b \\! K(x, t)\\, \\color{blue}{f(t)} \\,dt = g(x)\n",
     "$$\n",
     "\n",
-    "2. Fredholm equation of the second kind:\n",
+    "2. Уравнение Фредгольма второго рода:\n",
     "$$\n",
     "\\lambda \\int_a^b\\! K(x, t)\\, \\color{blue}{f(t)} \\, dt + g(x) = \\color{blue}{f(x)}\n",
     "$$\n",
     "\n",
-    "Here higtlighted function $f(x)$ is unknown, kernel function $K(x, t)$ and given function $g(x)$, $\\lambda$ is a real number. Numerically, Fredholm equations of the first kind are very ill-conditioned. We will consider equations of the second kind only."
+    "Здесь функция $f(x)$ неизвестна, $K(x, t)$ - ядро уравнения, заданная функция $g(x)$ и $\\lambda$ - рациональное число.\n",
+    "С точки зрения вычислений, уравение Фредгольма первого рода крайне неустойчиво. Далее мы рассмотрим только уравнение второго рода."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The basic idea is to approximate the integral by some quadrature formula\n",
+    "Основная идея - аппроксимировать интеграл некой квадратурной формулой\n",
     "\n",
     "$$\n",
     "\\int_a^b \\! \\xi(t)\\, dt \\approx \\sum_j^N w_j\\, \\xi(t_j)\n",
     "$$\n",
     "\n",
-    "with appropriate weights $w_j$ and nodes $t_j$ and $j=1, \\dots, N$. The accuracy of the approximation is controlled by $N$."
+    "с подходящими весами $w_j$ и узлами $t_j$, $j=1, \\dots, N$. Точность аппроксимации контролируется $N$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This way, the FE is approximated by \n",
+    "Таким образом, уравнение Фредгольма приближается следующим образом:\n",
     "\n",
     "$$\n",
     "\\lambda \\sum_j w_j\\, K(x, t_j)\\, \\color{blue}{f(t_j)} + g(x) = \\color{blue}{f(x)}\n",
     "$$\n",
     "\n",
-    "Note that here $x$ is a continuous variable, and we only discretized $t$.\n"
+    "Отметим, что $x$ - непрерывная переменная, в то время, как $t$ - дискретная."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Evaluating this equation on the grid $x = t_k$, we obtain\n",
+    "Оценивая данное уравнение на сетке $x = t_k$, получаем\n",
     "\n",
     "$$\n",
     "\\lambda \\sum_j w_j \\, K_{k, j}\\, \\color{blue}{f_j} + g_k = \\color{blue}{f_k}\n",
     "$$\n",
     "\n",
-    "where $f_j \\equiv f(t_j)$, $g_j \\equiv g(t_j)$ and $K_{k, j} \\equiv K(t_k, t_j)$. This is nothing but a system of linear algebraic equations for the vector of $\\color{blue}{f_j}$.\n",
+    "где $f_j \\equiv f(t_j)$, $g_j \\equiv g(t_j)$ and $K_{k, j} \\equiv K(t_k, t_j)$. Это ничто иное, как система линейных алгебраических уравнений на вектор $\\color{blue}{f_j}$.\n",
     "\n",
-    "Its solution gives the values of the unknown function $f(x)$ at the discrete values $x=t_j$ for $j=1, \\dots, N$."
+    "Ее решение выдает значение неизвестной функции $f(x)$ в дискретных точках $x=t_j$ для $j=1, \\dots, N$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task 2.1\n",
-    "(20% of the grade)\n",
+    "### Задание 2.1\n",
     "\n",
-    "Solve an example Fredholm equation of the second kind\n",
+    "Решите предложенное уравнение Фредгольма второго рода\n",
     "\n",
     "$$\n",
     "f(x) = \\sin(\\pi x)  + \\frac{1}{2} \\int_0^1\\! f(t) \\, dt\n",
     "$$\n",
     "\n",
-    "Here $a, b = 0, 1$, $\\lambda = \\dfrac{1}{2}$, the kernel is $K(x, t) = 1$ and the right-hand side $g(x) = \\sin(\\pi x)$.\n",
+    "Здесь $a, b = 0, 1$, $\\lambda = \\dfrac{1}{2}$, ядро $K(x, t) = 1$ и правая часть - $g(x) = \\sin(\\pi x)$.\n",
     "\n",
-    "In fact, the exact solution is (В. А. Попов, Сборник задач по интегральным уравнениям, 2006, стр. 5)\n",
+    "Точное решение (Сборник задач по интегральным уравнениям, 2006, стр. 5):\n",
     "\n",
     "$$\n",
     "f(x) = \\sin(\\pi x) + \\frac{2}{\\pi}\n",
@@ -244,9 +249,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the integral, we can use a Gaussian quadrature with the weight function $w(x) = 1$ on $(0, 1)$. Looking at http://dlmf.nist.gov/18.3, and find the corresponding function in *scipy.special* (pay attention to the integration interval).\n",
+    "Для нахождения интеграла воспользуйтесь Гауссовой квадратурой с весовой функцией $w(x) = 1$ на $(0, 1)$. Посмотрите на http://dlmf.nist.gov/18.3, и найдите соответствующую функцию в *scipy.special* (обратите внимание на область интегрирования).\n",
     "\n",
-    "Compare the obtained function values with the true solution for different values of $N$. What value of $N$ can you stop at?"
+    "Сравните полученные значения функции с точным решением для разных значений $N$. На каком $N$ можно остановиться?\n",
+    "\n",
+    "(20% итоговой оценки)"
    ]
   },
   {
@@ -255,19 +262,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Enter your code here"
+    "### Напишите код здесь"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task 2.2\n",
-    "(20% of the grade)\n",
+    "### Задание 2.2\n",
     "\n",
-    "An obvious issue with the privious result for $f(x)$ that it returns the solution on a fixed set of points. We do not control precise positions of these points.\n",
+    "Очевидной проблемой предыдущего результата для $f(x)$ является то, что он возвращает решения на фиксированном наборе точек. Мы не контролируем их точное расположение.\n",
     "\n",
-    "1. First, let's try to interpolate the values obtained in the previous task to a uniform grid of length 50. You may use any interpolation method. Compare the interpolation values with exact solution values."
+    "1. Для начала, попробуйте интерполировать значения, полученные в предыдущем пункте на равномерной сетке длиной 50. Можете использовать любой метод интерполяции. Сравните интерполяцию с точным значением."
    ]
   },
   {
@@ -276,18 +282,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Enter your code here"
+    "### Напишите код здесь"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Now use the following formula to calculate the function at points of the same uniform grid.\n",
+    "2. Теперь используйте следующую формулу, чтобы вычислить значение функции на той же равномерной сетке.\n",
+    "\n",
     "$$\n",
     "f(x) = g(x) + \\lambda \\sum_j^N w_j\\, K(x, t_j)\\, f(t_j)\n",
     "$$\n",
-    "Again, compare the interpolation values with the exact solution values, and also with the direct interpolation method."
+    "\n",
+    "Сравните эту интерполяцию с точным значением, а также с прямым интерполяционным методом.\n",
+    "\n",
+    "(20% итогой оценки)"
    ]
   },
   {
@@ -296,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Enter your code here"
+    "### Напишите код здесь"
    ]
   }
  ],
@@ -316,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
