--- a/week_6_calculus.ipynb
+++ b/week_6_calculus.ipynb
@@ -938,7 +938,7 @@
     "collapsed": true
    },
    "source": [
-    "$\\int\\limits_0^1\\! \\dfrac{1}{\\sqrt{x}}dx = 2 \\int\\limits_0^1\\! d\\sqrt{x} =2$"
+    "$\\int\\limits_0^1\\! \\dfrac{1}{\\sqrt{x}}\\,dx = 2 \\int\\limits_0^1\\! \\,d\\sqrt{x} =2$"
    ]
   },
   {
