--- a/week_9_Monte-Carlo.ipynb
+++ b/week_9_Monte-Carlo.ipynb
@@ -52,7 +52,7 @@
     "Напишите функцию, вычисляющую точный объем $d$-мерной сферы с помощью явного выражения. \n",
     "Объем многомерной сферы радиуса $R$ в $d$-измерениях дается формулой: \n",
     "$$\n",
-    "V_d = \\frac{\\pi^{d/2}} {\\Gamma(1 + d/2)}\n",
+    "V_d = \\frac{\\pi^{d/2}} {\\Gamma(1 + d/2)} R^d\n",
     "$$\n",
     "где $\\Gamma(x)$ - гамма функция, значение которой можно получить из scipy.special."
    ]
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
