--- a/week_8_Advanced_Integrals.ipynb
+++ b/week_8_Advanced_Integrals.ipynb
@@ -19,15 +19,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Например, давайте посчитаем следующий интеграл:\n",
-    "\n",
+    "For example, let's calculate the following integral:\n",
     "$$\n",
-    "\\int_{-1}^1 (7x^3 - 8 x^2 - 3 x + 3) dx  \\label{eq1}\\tag{1}\n",
+    "\\int_{-1}^1 (7x^3 - 8 x^2 - 3 x + 3) dx  \n",
     "$$\n",
     "\n",
-    "Здесь функция уже полиномиальна, поэтому возьмем весовую функцию $\\omega(x) = 1$. Тогда вычисление интеграла сводится к сумме корней полинома, соответствующих весовой функции $\\omega(x) = 1$. Например, здесь https://dlmf.nist.gov/18.3 вы можете увидеть, какой базис полиномов соответствует вашей весовой функции.\n",
+    "Here function is already polynomial, so we put the weight function $\\omega(x) = 1$. Then the calculation of the integral reduces to the sum in the polynomials roots witch corresponding to the weight function $\\omega(x) = 1$. For example, here https://dlmf.nist.gov/18.3 you may see which basis of polynomials corresponds to your weight function.\n",
     "\n",
-    "Заметим, что нашей соответствуют полиномы Лежандра. Теперь, зайдем в документацию https://docs.scipy.org/doc/scipy/reference/special.html#orthogonal-polynomials. Функция *roots_legendre* сразу же выдаст корни полиномов Лежандра, а также веса к их корням (для полиномов Лежандра все эти веса равны единице)."
+    "You may see, that Legendre polynomials correspond to our weight function. Now go to the documentation https://docs.scipy.org/doc/scipy/reference/special.html#orthogonal-polynomials. Here, the function *roots_legendre* immediately gives you the roots of the Legendre polynomial and weight at this roots (for Legendre polynomials all these weight are ones)."
    ]
   },
   {
@@ -41,16 +40,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Посчитайте точное значение интеграла ([1](#mjx-eqn-eq1)) \"руками\". Сравните его с полученным численным значением."
+    "1. Посчитайте точное значение интеграла ([1](#mjx-eqn-eq1)) \"руками\". Вспомните этот результат, когда будете сравнивать с численным решением."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 43,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Напишите код здесь"
+    "$$\n",
+    "\\int_{-1}^1 (7x^3 - 8 x^2 - 3 x + 3) dx  = \\int_{-1}^1 (- 8 x^2 + 3)dx = -8 \\frac{x^3}{3}|_{-1}^{1} + 3x|_{-1}^{1} = \\frac{2}{3}\n",
+    "$$"
    ]
   },
   {
@@ -62,11 +61,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0.6666666667 21\n"
+    }
+   ],
    "source": [
-    "### Напишите код здесь"
+    "from math import log\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "def midpoint_rule(func, a, b, eps):\n",
+    "    I_n = np.array([(b-a)*func((a+b)/2)])\n",
+    "    n = 2\n",
+    "    while True:\n",
+    "        x_n = np.linspace(a,b,n+1)\n",
+    "        h = np.array([])\n",
+    "        Q = np.zeros(n)\n",
+    "        i = 0\n",
+    "        h = x_n[1]-x_n[0]\n",
+    "        while i < n:\n",
+    "            Q[i]= h*func((x_n[i+1]+x_n[i])/2)\n",
+    "            i += 1 \n",
+    "        I = np.sum(Q)\n",
+    "        I_n = np.append(I_n,I)\n",
+    "        if np.abs(I_n[int(np.log2(n))-1]-I_n[int(np.log2(n/2))-1])< eps:\n",
+    "            break\n",
+    "        n *= 2\n",
+    "    return round(I_n[int(np.log2(n/2))-1],-int(np.log10(eps))), I_n, I_n.shape[0]\n",
+    "\n",
+    "def int_f(x):\n",
+    "    return 7*x**3-8*x**2-3*x+3\n",
+    "\n",
+    "print(midpoint_rule(int_f,-1,1,1e-10)[0],midpoint_rule(int_f,-1,1,1e-10)[2])"
    ]
   },
   {
@@ -312,9 +343,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.4 64-bit ('base': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python37464bitbaseconda8554b98a659b499ab056206ae7f8b3f7"
   },
   "language_info": {
    "codemirror_mode": {
@@ -326,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
