--- a/week_8_Advanced_Integrals.ipynb
+++ b/week_8_Advanced_Integrals.ipynb
@@ -61,13 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "0.6666666667 21\n"
+     "text": "0.6666666667 -- numerical value, 2097151 -- number of nodes\n"
     }
    ],
    "source": [
@@ -97,7 +97,7 @@
     "def int_f(x):\n",
     "    return 7*x**3-8*x**2-3*x+3\n",
     "\n",
-    "print(midpoint_rule(int_f,-1,1,1e-10)[0],midpoint_rule(int_f,-1,1,1e-10)[2])"
+    "print(midpoint_rule(int_f,-1,1,1e-10)[0],\"-- numerical value,\",2**(midpoint_rule(int_f,-1,1,1e-10)[2]-1),\"-- number of nodes\")"
    ]
   },
   {
@@ -109,11 +109,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[6.         0.66666667 0.66666667 0.66666667 0.66666667 0.66666667]\n"
+    }
+   ],
    "source": [
-    "### Напишите код здесь"
+    "from scipy.special import roots_legendre, roots_chebyt\n",
+    "\n",
+    "integ = np.array([])\n",
+    "for j in range(1,7):\n",
+    "    nodes, weights = roots_legendre(j)\n",
+    "    integ=np.append(integ, (int_f(nodes) * weights).sum())\n",
+    "print(integ)"
    ]
   },
   {
@@ -127,11 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0.66666667 -- numerical value, 131072 -- number of nodes Midpoint for eps = 1e-8\n2 -- number of Legendre nodes for eps = 1e-8\n"
+    }
+   ],
    "source": [
-    "### Напишите вывод"
+    "print(midpoint_rule(int_f,-1,1,1e-8)[0],\"-- numerical value,\",2**(midpoint_rule(int_f,-1,1,1e-8)[2]-1),\"-- number of nodes Midpoint for eps = 1e-8\")\n",
+    "print(2,\"-- number of Legendre nodes for eps = 1e-8\")"
    ]
   },
   {
@@ -152,6 +171,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "I = \\int_{0}^{10} (7x^3 - 8 x^2 - 3 x + 3) dx, \\; \\xi = \\frac{x}{5}-1, \\; I=5\\int_{-1}^{1} (7(5\\xi+5)^3 - 8 (5\\xi+5)^2 - 3 (5\\xi+5) + 3) d\\xi\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def int"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -161,10 +198,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "14713.333333333336\n1.8189894035458565e-12\n"
+    }
+   ],
+   "source": [
+    "def int_f2(x):\n",
+    "    return 7*(5*x+5)**3-8*(5*x+5)**2-3*(5*x+5)+3\n",
+    "\n",
+    "nodes2, weights2 = roots_legendre(2)\n",
+    "integ1 = (int_f2(nodes2) * weights2).sum()\n",
+    "\n",
+    "print(5*integ1)\n",
+    "print(np.abs(44140/3-5*integ1)) #comparing with analytical value"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Сравните результат с точным значением интеграла."
+    "### Напишите код здесьСравните результат с точным значением интеграла."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\int_{0}^{1} \\frac{cos(2\\pi x) dx }{\\sqrt{1 - x^2}} = \\frac{1}{2}\\int_{-1}^{1} \\frac{cos(2\\pi x) dx }{\\sqrt{1 - x^2}}\n",
+    "$$\n",
+    "I will use Chebyshev Polynomials of First Kind."
    ]
   },
   {
@@ -175,8 +244,7 @@
     "\n",
     "Вычислите значение следующиего интеграла:\n",
     "$$\n",
-    "\\int_{0}^{2\\pi} \\frac{cos(x) dx }{\\sqrt{4\\pi^2 - x^2}}\n",
-    "$$\n",
+    "\\int_{0}^{2\\pi} \\frac{cos(x) dx }{\\sqrt{4\\pi^2 - x^2}} \n",
     "используя соответствующий базис ортогональных полиномов.\n",
     "Найдите степень полинома (количество узлов), при которой точность превысит ошибку плавающей точки.\n",
     "\n",
@@ -185,11 +253,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0.6920203176245284\n"
+    }
+   ],
    "source": [
-    "### Напишите код здесь"
+    "def func1(x):\n",
+    "    return np.cos(2*np.pi*x)\n",
+    "\n",
+    "\n",
+    "integ2 = np.array([])\n",
+    "for j in range(1,120):\n",
+    "    nodes2, weights2 = roots_chebyt(j)\n",
+    "    integ2=np.append(integ2, (func1(nodes2) * weights2).sum())\n",
+    "print(integ2[j-1])"
    ]
   },
   {
