--- a/week_8_Advanced_Integrals.ipynb
+++ b/week_8_Advanced_Integrals.ipynb
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Напишите код здесьСравните результат с точным значением интеграла."
+    "Сравните результат с точным значением интеграла."
    ]
   },
   {
@@ -245,6 +245,7 @@
     "Вычислите значение следующиего интеграла:\n",
     "$$\n",
     "\\int_{0}^{2\\pi} \\frac{cos(x) dx }{\\sqrt{4\\pi^2 - x^2}} \n",
+    "$$\n",
     "используя соответствующий базис ортогональных полиномов.\n",
     "Найдите степень полинома (количество узлов), при которой точность превысит ошибку плавающей точки.\n",
     "\n",
@@ -253,13 +254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "0.6920203176245284\n"
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-34-d6ffe1ee79ca>, line 9)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-d6ffe1ee79ca>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    print([j]/2integ2[j-1])\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
