--- a/week_8_Advanced_Integrals.ipynb
+++ b/week_8_Advanced_Integrals.ipynb
@@ -61,13 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "0.6666666667 -- numerical value, 2097151 -- number of nodes\n"
+     "text": "0.6666666667 -- numerical value, 1048576 -- number of nodes\n"
     }
    ],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -181,25 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def int"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Напишите код здесь"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -230,16 +212,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
-    "\\int_{0}^{1} \\frac{cos(2\\pi x) dx }{\\sqrt{1 - x^2}} = \\frac{1}{2}\\int_{-1}^{1} \\frac{cos(2\\pi x) dx }{\\sqrt{1 - x^2}}\n",
-    "$$\n",
-    "I will use Chebyshev Polynomials of First Kind."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Задание 1.3\n",
     "\n",
     "Вычислите значение следующиего интеграла:\n",
@@ -253,17 +225,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\int_{0}^{1} \\frac{cos(2\\pi x) dx }{\\sqrt{1 - x^2}} = \\frac{1}{2}\\int_{-1}^{1} \\frac{cos(2\\pi x) dx }{\\sqrt{1 - x^2}}\n",
+    "$$\n",
+    "I will use Chebyshev Polynomials of First Kind."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-34-d6ffe1ee79ca>, line 9)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-d6ffe1ee79ca>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    print([j]/2integ2[j-1])\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0.6920203176245284\n"
     }
    ],
    "source": [
@@ -271,11 +250,11 @@
     "    return np.cos(2*np.pi*x)\n",
     "\n",
     "\n",
-    "integ2 = np.array([])\n",
+    "integr = np.array([])\n",
     "for j in range(1,120):\n",
-    "    nodes2, weights2 = roots_chebyt(j)\n",
-    "    integ2=np.append(integ2, (func1(nodes2) * weights2).sum())\n",
-    "print(integ2[j-1])"
+    "    nodes3, weights3 = roots_chebyt(j)\n",
+    "    integr=np.append(integr, (func1(nodes3) * weights3).sum())\n",
+    "print(integr[j-1])"
    ]
   },
   {
