--- a/week_8_Advanced_Integrals.ipynb
+++ b/week_8_Advanced_Integrals.ipynb
@@ -236,13 +236,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "0.6920203176245284\n"
+     "text": "0.0 , number of nodes--- 1\n0.0 , number of nodes--- 27\n0.3460101588122643\n"
     }
    ],
    "source": [
@@ -251,10 +251,12 @@
     "\n",
     "\n",
     "integr = np.array([])\n",
-    "for j in range(1,120):\n",
+    "for j in range(1,28):\n",
     "    nodes3, weights3 = roots_chebyt(j)\n",
     "    integr=np.append(integr, (func1(nodes3) * weights3).sum())\n",
-    "print(integr[j-1])"
+    "    if (np.abs(integr[j-1]/2-integr[j-2]/2) == 0):\n",
+    "        print(np.abs(integr[j-1]/2-integr[j-2]/2),', number of nodes---',j)\n",
+    "print(integr[j-1]/2)"
    ]
   },
   {
