--- a/week_8_Advanced_Integrals.ipynb
+++ b/week_8_Advanced_Integrals.ipynb
@@ -269,12 +269,12 @@
     "\n",
     "1. Уравение Фредгольма первого рода:\n",
     "$$\n",
-    "\\int_a^b \\! K(x, t)\\, \\color{blue}{f(t)} \\,dt = g(x)\n",
+    "\\int_a^b \\! K(x, t)\\, \\color{red}{f(t)} \\,dt = g(x)\n",
     "$$\n",
     "\n",
     "2. Уравнение Фредгольма второго рода:\n",
     "$$\n",
-    "\\lambda \\int_a^b\\! K(x, t)\\, \\color{blue}{f(t)} \\, dt + g(x) = \\color{blue}{f(x)}\n",
+    "\\lambda \\int_a^b\\! K(x, t)\\, \\color{red}{f(t)} \\, dt + g(x) = \\color{red}{f(x)}\n",
     "$$\n",
     "\n",
     "Здесь функция $f(x)$ неизвестна, $K(x, t)$ - ядро уравнения, заданная функция $g(x)$ и $\\lambda$ - рациональное число.\n",
@@ -301,7 +301,7 @@
     "Таким образом, уравнение Фредгольма приближается следующим образом:\n",
     "\n",
     "$$\n",
-    "\\lambda \\sum_j w_j\\, K(x, t_j)\\, \\color{blue}{f(t_j)} + g(x) = \\color{blue}{f(x)}\n",
+    "\\lambda \\sum_j w_j\\, K(x, t_j)\\, \\color{red}{f(t_j)} + g(x) = \\color{red}{f(x)}\n",
     "$$\n",
     "\n",
     "Отметим, что $x$ - непрерывная переменная, в то время, как $t$ - дискретная."
@@ -314,10 +314,10 @@
     "Оценивая данное уравнение на сетке $x = t_k$, получаем\n",
     "\n",
     "$$\n",
-    "\\lambda \\sum_j w_j \\, K_{k, j}\\, \\color{blue}{f_j} + g_k = \\color{blue}{f_k}\n",
+    "\\lambda \\sum_j w_j \\, K_{k, j}\\, \\color{red}{f_j} + g_k = \\color{red}{f_k}\n",
     "$$\n",
     "\n",
-    "где $f_j \\equiv f(t_j)$, $g_j \\equiv g(t_j)$ and $K_{k, j} \\equiv K(t_k, t_j)$. Это ничто иное, как система линейных алгебраических уравнений на вектор $\\color{blue}{f_j}$.\n",
+    "где $f_j \\equiv f(t_j)$, $g_j \\equiv g(t_j)$ and $K_{k, j} \\equiv K(t_k, t_j)$. Это ничто иное, как система линейных алгебраических уравнений на вектор $\\color{red}{f_j}$.\n",
     "\n",
     "Ее решение выдает значение неизвестной функции $f(x)$ в дискретных точках $x=t_j$ для $j=1, \\dots, N$."
    ]
