--- a/week_8_Advanced_Integrals.ipynb
+++ b/week_8_Advanced_Integrals.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,8 @@
     }
    ],
    "source": [
-    "from scipy.special import roots_legendre, roots_chebyt\n",
+    "from scipy.special import roots_legendre, roots_chebyt, roots_sh_legendre\n",
+    "from scipy.linalg import solve\n",
     "\n",
     "integ = np.array([])\n",
     "for j in range(1,7):\n",
@@ -236,13 +237,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "0.0 , number of nodes--- 1\n0.0 , number of nodes--- 27\n0.3460101588122643\n"
+     "text": "0.0 , number of nodes--- 1\n5.551115123125783e-17 , number of nodes--- 19\n5.551115123125783e-17 , number of nodes--- 26\n0.0 , number of nodes--- 27\n0.3460101588122643\n"
     }
    ],
    "source": [
@@ -254,7 +255,7 @@
     "for j in range(1,28):\n",
     "    nodes3, weights3 = roots_chebyt(j)\n",
     "    integr=np.append(integr, (func1(nodes3) * weights3).sum())\n",
-    "    if (np.abs(integr[j-1]/2-integr[j-2]/2) == 0):\n",
+    "    if (np.abs(integr[j-1]/2-integr[j-2]/2) <1e-16):\n",
     "        print(np.abs(integr[j-1]/2-integr[j-2]/2),', number of nodes---',j)\n",
     "print(integr[j-1]/2)"
    ]
@@ -356,11 +357,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Напишите код здесь"
+    "a, b = 0, 1\n",
+    "\n",
+    "lmbda = 0.5\n",
+    "\n",
+    "def K(x, t):\n",
+    "    return 1\n",
+    "\n",
+    "def g(x):\n",
+    "    return np.sin(np.pi*x)\n",
+    "\n",
+    "def solve_e1(N):\n",
+    "    x, w = roots_sh_legendre(N)\n",
+    "    # construct the weight matrix\n",
+    "    Kmat = np.empty((N, N))\n",
+    "    for i in range(N):\n",
+    "        for j in range(N):\n",
+    "            Kmat[i, j] = w[j] * K(x[i], x[j])\n",
+    "\n",
+    "\n",
+    "    lhs = np.eye(N) - lmbda*Kmat\n",
+    "    rhs = [g(_) for _ in x]\n",
+    "    \n",
+    "    soln = solve(lhs, rhs)\n",
+    "    return x, soln\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-51-bcbb70fea6fb>, line 3)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-51-bcbb70fea6fb>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    plt.subplot(2, 2, 3)plt.subplot(2, 2, 3)\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "xx = np.linspace(0, 1, 51)\n",
+    "plt.figure(figsize=(8,8)) \n",
+    "plt.subplot(2, 2, 3)plt.subplot(2, 2, 3)\n",
+    "plt.plot(xx, np.sin(np.pi*xx) + 2./np.pi, '-', lw=5, alpha=0.5, label='ground truth')\n",
+    "\n",
+    "\n",
+    "for N in [5, 10, 15]:\n",
+    "    x, y = solve_e1(N)\n",
+    "    \n",
+    "    plt.plot(x, y, 'o', lw=3, ms=10, label='N = %s' % N)\n",
+    "    \n",
+    "plt.legend(loc='best')"
    ]
   },
   {
